--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ html, body {
 }
 
 .landing {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url('./media/images/concert/aditya-chinchure-ZhQCZjr9fHo-unsplash.jpg');
     background-position-y: -150px;
@@ -122,4 +122,28 @@ html, body {
     cursor: pointer;
     user-select: none;
     font-weight: bold;
+    text-decoration: none;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(0, 0, 0, 1);
+  color: white;
+  font-family: 'IBM Plex Mono', monospace;
+  justify-content: center;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 1rem;
+}
+
+nav a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+nav a:hover {
+  background-color: rgba(255, 255, 255, 0.05);
 }
