--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@keyframes carousel {
+@keyframes carouselY {
     0% {
       transform: translateY(-25px);
       opacity: 0;
@@ -17,6 +17,29 @@
     }
     100% {
       transform: translateY(25px);
+      opacity: 0;
+    }
+  }
+
+  @keyframes carouselX {
+    0% {
+      transform: translateX(-25px);
+      opacity: 0;
+    }
+    1% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    16% {
+      transform: translateX(0px);
+      opacity: 1;
+    }
+    17% {
+      transform: translateX(0px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0px);
       opacity: 0;
     }
   }
@@ -91,9 +114,8 @@ html, body {
 
 .landing .content .desc .carousel li {
     list-style: none;
-    animation: carousel 30s infinite;
+    animation: carouselY 30s infinite;
     position: absolute;
-    top: 100%;
     opacity: 0;
     top: auto;
 }
@@ -134,6 +156,7 @@ nav {
   background-color: rgba(0, 0, 0, 1);
   color: white;
   justify-content: center;
+  z-index: 99;
 }
 
 nav a {
@@ -148,6 +171,88 @@ nav a:visited {
 
 nav a:hover {
   background-color: rgba(255, 255, 255, 0.05);
+}
+
+#Schedule {
+  display: flex;
+  align-items: center;
+}
+#Schedule div {
+  width: 100%;
+  display: flex;
+}
+
+#Schedule .time-table {
+  justify-content: center;
+}
+
+#Schedule .time-table li {
+  list-style: none;
+}
+
+#Schedule .time-table li {
+  padding: 1rem;
+}
+
+#Schedule .artists {
+  flex-direction: column;
+  justify-content: center;
+  height: 62vh;
+}
+
+#Schedule .artists ul{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#Schedule .artists li{
+  width: 49.15%;
+  height: 50%;
+  list-style: none;
+  display: flex;
+  align-items: flex-end;
+  color: white;
+  text-shadow: -2px 2px black;
+  padding-left: 1rem;
+  background-size: cover;
+  animation: carouselX 30s infinite;
+  position: absolute;
+  opacity: 0;
+  top: 105.3%;
+}
+
+#Schedule .artists .descriptions li{
+  top: 155vh;
+  color: black;
+  text-shadow: none;
+  height: fit-content;
+  padding: 0.5rem;
+  background-image: none;
+}
+
+#Schedule .Bilderbuch{
+  background-image: url('./media/images/artists/bilderbuch2.jpg');
+}
+#Schedule .artists .Wanda {
+  background-image: url('./media/images/artists/wanda3.jpg');
+  animation-delay: 5s;
+}
+#Schedule .artists .Christina {
+  background-image: url('./media/images/artists/christina-sturmer3.jpg');
+  animation-delay: 10s;
+}
+#Schedule .artists .Volbeat {
+  background-image: url('./media/images/artists/volbeat2.jpg');
+  animation-delay: 15s;
+}
+#Schedule .artists .Imagine {
+  background-image: url('./media/images/artists/imagine-dragons2.jpg');
+  animation-delay: 20s;
+}
+#Schedule .artists .Opus {
+  background-image: url('./media/images/artists/opus.jpg');
+  animation-delay: 25s;
 }
 
 #FAQ {
