--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ html, body {
     width: 100%;
     height: 100vh;
     background-image: url('./media/images/concert/aditya-chinchure-ZhQCZjr9fHo-unsplash.jpg');
-    background-position-y: -150px;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -77,14 +76,14 @@ html, body {
 }
 .landing .content {
     color: white;
+    box-shadow: 0 0 10px 20px rgb(0 0 0 / 20%);
 }
 .landing .content h1 {
-    font-size: 92px;
+    font-size: 6rem;
     padding: 3rem;
     margin: 0;
     background-color: rgba(0, 0, 0, 0.15);
     backdrop-filter: blur(2px);
-    box-shadow: 0 0 10px 20px rgb(0 0 0 / 20%);
 }
 
 .landing .content .desc {
