--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ html, body {
     user-select: none;
     font-weight: bold;
     text-decoration: none;
+    text-shadow: 0px -5px 5px black;
 }
 
 nav {
@@ -259,6 +260,7 @@ nav a:hover {
 #Testimonials {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 2rem;
 }
 
 #Testimonials div{
