--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ html, body {
     background-image: url('./media/images/concert/aditya-chinchure-ZhQCZjr9fHo-unsplash.jpg');
     background-size: cover;
     background-position-x: center;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -149,7 +150,6 @@ html, body {
     user-select: none;
     font-weight: bold;
     text-decoration: none;
-    text-shadow: 0px -5px 5px black;
 }
 
 nav {
